@startuml
hide circle
skinparam classAttributeIconSize 0

class Buku {
  +isbn: String
  +judul: String
  +kategori: String
  +jumlahEksemplar: Number
  +eksemplarTersedia: Number
}

class Anggota {
  +id: Number
  +nama: String
  +email: String
}

class Peminjaman {
  +id: Number
  +tanggalPinjam: Date
  +status: String
}

class Perpustakaan {
  -buku: Buku[]
  -anggota: Anggota[]
  -peminjaman: Peminjaman[]
  -nomorPeminjaman: Number
  +tambahBuku(buku: Buku)
  +tambahAnggota(anggota: Anggota)
  +pinjamkan(isbn, idAnggota, tanggal): Peminjaman
  +daftarPeminjamanAktif(): Peminjaman[]
}

Perpustakaan "1" o-- "0..*" Buku : mengelola
Perpustakaan "1" o-- "0..*" Anggota : mendaftarkan
Perpustakaan "1" o-- "0..*" Peminjaman : mencatat
Peminjaman "0..*" --> "1" Buku : buku
Peminjaman "0..*" --> "1" Anggota : peminjam
@enduml

pustakawan berasosiasi dengan perpustakaan
@startuml
class Buku {
  +isbn: String
  +judul: String
  +kategori: String
  +jumlahEksemplar: int
  +eksemplarTersedia: int
}

class Anggota {
  +id: int
  +nama: String
  +email: String
}

class Pustakawan {
  +id: int
  +nama: String
  +tambahBukuKePerpustakaan(perpustakaan: Perpustakaan, buku: Buku)
}

class Peminjaman {
  +id: int
  +buku: Buku
  +anggota: Anggota
  +tanggalPinjam: Date
  +status: String
}

class Perpustakaan {
  -buku: List<Buku>
  -anggota: List<Anggota>
  -peminjaman: List<Peminjaman>
  -pustakawan: List<Pustakawan>
  -nomorPeminjaman: int
  +tambahBuku(buku: Buku)
  +tambahAnggota(anggota: Anggota)
  +tambahPustakawan(pustakawan: Pustakawan)
  +pinjamkan(isbn: String, idAnggota: int, tanggal: Date): Peminjaman
  +daftarPeminjamanAktif(): List<Peminjaman>
}

' Relasi Agregasi
Perpustakaan "1" o-- "*" Buku : mengagregasi
Perpustakaan "1" o-- "*" Anggota : mengagregasi
Perpustakaan "1" o-- "*" Peminjaman : mengagregasi
Perpustakaan "1" o-- "*" Pustakawan : mempekerjakan

' Relasi Asosiasi
Peminjaman "*" --> "1" Buku : mencatat
Peminjaman "*" --> "1" Anggota : dipinjam oleh
Pustakawan "1..*" --> "1..*" Perpustakaan : mengelola
@enduml